--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-body {
+    background-color: #101010 !important;
+}
+
+.nav-wrapper li a {
+    border-radius: 11px;
+    display: flex;
+    align-items: center;
+    color: #6c757d;
+    transition: .2s ease-in-out;
+}
+
+.nav-wrapper li a:hover {
+    background-color: #1b1b1b;
+    color: #ececec;
+}
+
+.sp-text {
+    color: #ececec !important;
+    font-size: 13px !important;
+}
