--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    min-height: 0;
+    min-width: 0;
+}
+
 .bg-body {
     background-color: #101010 !important;
 }
@@ -42,4 +47,13 @@
 .inactive-button:focus {
     outline: none !important;
     box-shadow: none !important;
+}
+
+.bg-footer {
+    background-color: #1b1b1b !important;
+    color: #ececec;
+}
+
+.orange-color {
+    color: #e76f51;
 }
