--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -52,6 +52,18 @@
     background-color: rgba(33, 37, 41, 0.75) !important;
 }
 
+.slickSlider {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-direction: column !important;
+    gap: 10px !important;
+}
+
+.followPeople {
+    border-bottom: 0.3px solid #292929;
+}
+
 
 /* @media screen and (max-width:992px) {
     .navbar{
