--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -60,8 +60,8 @@
     gap: 10px !important;
 }
 
-.followPeople {
-    border-bottom: 0.3px solid #292929;
+.top_border {
+    border-top: 0.3px solid #292929;
 }
 
 
