--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -73,8 +73,18 @@
 }
 
 
-/* @media screen and (max-width:992px) {
-    .navbar{
+@media screen and (max-width:992px) {
+
+    .navbar,
+    .sidebar {
         display: none;
     }
-} */
+
+    .wrapper {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "navbar"
+            "main"
+            "footer";
+    }
+}
