--- a/styles/reset.css
+++ b/styles/reset.css
@@ -19,6 +19,11 @@ dd {
     border: 0;
 }
 
+img{
+    width: auto!important;
+    height: auto!important;
+}
+
 body {
     font-size: 16px;
     line-height: 1.5;
